rust/macros/tests/invalid/target/debug/deps/single_argument_rs-6d5d0348d2b9d91c.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libsingle_argument_rs-6d5d0348d2b9d91c.rmeta: single-argument.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-6d5d0348d2b9d91c.d: single-argument.rs Cargo.toml

single-argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
